--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,8 @@ version '1.0-SNAPSHOT'
 
 apply plugin: 'java'
 
+defaultTasks 'clean', 'build'
+
 sourceCompatibility = 1.8
 
 repositories {
@@ -10,7 +12,27 @@ repositories {
     maven { url "http://clojars.org/repo" }
 }
 
+jar {
+    from {
+        configurations.compile.collect {
+            it.isDirectory() ? it : zipTree(it)
+        }
+        configurations.runtime.collect {
+            it.isDirectory() ? it : zipTree(it)
+        }
+    }
+    manifest {
+        attributes 'Main-Class': 'entry.main'
+    }
+}
+
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compile "org.java-websocket:java-websocket:1.3.3"
 }
+
+/*buildscript {
+    dependencies {
+        classpath fileTree(dir: '../../build/libs', include: '*.jar', excludes: ['*javadoc.jar', '*sources.jar'])
+    }
+}*/
