--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,7 @@ jar {
         }
     }
     manifest {
-        attributes 'Main-Class': 'entry.main'
+        attributes 'Main-Class': 'controllers.main'
     }
 }
 
